Convert Entity type & Extension resources into Eligibility Groups; Update settings
       - Created a field-pack resource for each entity-type resource containing fields
       - Created a field-pack resource for each entity-type-extension resource.
       - Update settings
       - Moved the entity-type enabled property into the settings as per new schema

       Follow-on commits will completely remove the extension resource and update the
       entity-type resource to no longer include fields & the enabled bit

--- a/default/km/settings.json
+++ b/default/km/settings.json
@@ -1,4 +1,11 @@
 {
   "$schema": "https://schema.yext.com/config/km/settings/v1",
-  "primaryEntityType": "faq"
+  "primaryEntityType": "faq",
+  "entityTypeSettings": [
+    {
+      "entityType": "faq",
+      "defaultFieldEligibilityGroup": "faq.default",
+      "disabled": false
+    }
+  ]
 }
